@@ -6,7 +6,6 @@ import json
 import base64
 
 from werkzeug.wrappers import Response
-from werkzeug.utils import cached_property
 from werkzeug.exceptions import (
     BadRequest, InternalServerError, Conflict, Forbidden, Locked,
     TooManyRequests)
@@ -15,6 +14,7 @@ from trytond.protocols.wrappers import Request
 from trytond.exceptions import (
     TrytonException, UserWarning, LoginException, ConcurrencyException,
     RateLimitException, MissingDependenciesException)
+from trytond.tools import cached_property
 
 
 class JSONDecoder(object):
