@@ -8,7 +8,6 @@ import logging
 from decimal import Decimal
 
 from werkzeug.wrappers import Response
-from werkzeug.utils import cached_property
 from werkzeug.exceptions import (
     BadRequest, InternalServerError, Conflict, Forbidden, Locked,
     TooManyRequests)
@@ -17,6 +16,7 @@ from trytond.protocols.wrappers import Request
 from trytond.exceptions import (
     TrytonException, UserWarning, LoginException, ConcurrencyException,
     RateLimitException, MissingDependenciesException)
+from trytond.tools import cached_property
 
 logger = logging.getLogger(__name__)
 
