@@ -1,5 +1,9 @@
 # This file is part of Tryton.  The COPYRIGHT file at the top level of
 # this repository contains the full copyright notices and license terms.
+try:
+    from functools import cached_property
+except ImportError:
+    from werkzeug.utils import cached_property
 
 from .misc import (
     file_open, get_smtp_server, reduce_ids, reduce_domain,
@@ -10,7 +14,7 @@ from .decimal_ import decistmt
 __all__ = ['file_open', 'get_smtp_server', 'reduce_ids',
     'reduce_domain', 'grouped_slice', 'is_instance_method', 'resolve',
     'strip_wildcard', 'lstrip_wildcard', 'rstrip_wildcard', 'slugify',
-    'decistmt', 'ClassProperty', 'cursor_dict']
+    'decistmt', 'ClassProperty', 'cursor_dict', 'cached_property']
 
 
 class ClassProperty(property):
