@@ -1,3 +1,4 @@
+* Add cached_property in tools
 * Use custom class to store record data
 * Add configuration check
 * Add support for properties to fields.depends
